--- a/WebApplication1/Content/Main.css
+++ b/WebApplication1/Content/Main.css
@@ -1,16 +1,11 @@
-﻿
-.inactive {
+﻿.item {
     outline: 5px solid black;
+    width: 100px;
+    height: 70px;
+    outline-offset: -4px;
 }
-
 .active {
     outline: 5px solid yellow;
     filter: brightness(150%);
     box-shadow: 5px 5px 5px #fff;
-}
-
-.item {
-    width: 100px;
-    height: 70px;
-    outline-offset: -4px;
 }
