--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -20,44 +20,71 @@
             </div>
         </div>
     </script>
-    <button popover-trigger="mouseenter" popover-placement="bottom" uib-popover-template="'tpl.html'" data-content="Link 1 content...">Hunter Armor</button>
-    <button popover="WEALROCK" popover-trigger="mouseenter" popover-placement="right" data-content="eeeee">Warlock Armor</button>
-    <button>Weapons</button>
-    <h2>Weapons</h2>
-    <span ng-repeat="item in ctrl.weaponList">
-        <img uib-popover class="item inactive" 
-             ng-click="ctrl.toggle(item)" 
-             ng-src="{{item.image}}" 
-             popover-trigger="'mouseenter'" 
-             popover-placement="bottom" 
-             uib-popover-template="'tpl.html'"
-             ng-class="{'active': item.active}"
-        />
-    </span>
-    <h2>Hunter</h2>
-    <span ng-repeat="item in ctrl.hunterList">
-        <img class="item inactive" ng-mouseover="ctrl.showMouseover(item)" ng-mouseleave="ctrl.hideMouseover(item)" ng-if="!item.active" ng-click="ctrl.toggle(item)" ng-src="{{item.image}}" />
-        <img class="item active" ng-mouseover="ctrl.showMouseover(item)" ng-mouseleave="ctrl.hideMouseover(item)" ng-if="item.active" ng-click="ctrl.toggle(item)" ng-src="{{item.image}}" />
-    </span>
-    <h2>Warlock</h2>
-    <span ng-repeat="item in ctrl.warlockList">
-        <img class="item inactive" ng-mouseover="ctrl.showMouseover(item)" ng-mouseleave="ctrl.hideMouseover(item)" ng-if="!item.active" ng-click="ctrl.toggle(item)" ng-src="{{item.image}}" />
-        <img class="item active" ng-mouseover="ctrl.showMouseover(item)" ng-mouseleave="ctrl.hideMouseover(item)" ng-if="item.active" ng-click="ctrl.toggle(item)" ng-src="{{item.image}}" />
-    </span>
-    <h2>Titan</h2>
-    <span ng-repeat="item in ctrl.titanList">
-        <img class="item inactive" ng-mouseover="ctrl.showMouseover(item)" ng-mouseleave="ctrl.hideMouseover(item)" ng-if="!item.active" ng-click="ctrl.toggle(item)" ng-src="{{item.image}}" />
-        <img class="item active" ng-mouseover="ctrl.showMouseover(item)" ng-mouseleave="ctrl.hideMouseover(item)" ng-if="item.active" ng-click="ctrl.toggle(item)" ng-src="{{item.image}}" />
-    </span>
-    <script src="~/Scripts/angular.js"></script>
-    <script src="~/Scripts/angular-cookies.js"></script>
-    <script src="~/Scripts/angular-animate.js"></script>
-    <script src="~/Scripts/angular-ui/ui-bootstrap.js"></script>
-    <script src="~/Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
-    <script src="~/App/Data/Hunter.js"></script>
-    <script src="~/App/Data/Titan.js"></script>
-    <script src="~/App/Data/Warlock.js"></script>
-    <script src="~/App/Data/Weapons.js"></script>
-    <script src="~/App/angular.module.js"></script>
+    <button ng-click="ctrl.weaponsHide = !ctrl.weaponsHide">Weapons</button>
+    <button ng-click="ctrl.hunterHide = !ctrl.hunterHide">Hunter Armor</button>
+    <button ng-click="ctrl.warlockHide = !ctrl.warlockHide">Warlock Armor</button>
+    <button ng-click="ctrl.titanHide = !ctrl.titanHide">Titan Armor</button>
+    <div id="weapons" ng-if="!ctrl.weaponsHide">
+        <h2>Weapons</h2>
+        <span ng-repeat="item in ctrl.weaponList">
+            <img uib-popover class="item inactive" 
+                 ng-click="ctrl.toggle(item)" 
+                 ng-src="{{item.image}}" 
+                 popover-trigger="'mouseenter'" 
+                 popover-placement="bottom" 
+                 uib-popover-template="'tpl.html'"
+                 ng-class="{'active': item.active}"
+            />
+        </span>
+    </div>
+    <div id="hunter" ng-if="!ctrl.hunterHide">
+        <h2>Hunter</h2>
+        <span ng-repeat="item in ctrl.hunterList">
+            <img uib-popover class="item inactive"
+                 ng-click="ctrl.toggle(item)"
+                 ng-src="{{item.image}}"
+                 popover-trigger="'mouseenter'"
+                 popover-placement="bottom"
+                 uib-popover-template="'tpl.html'"
+                 ng-class="{'active': item.active}" />
+        </span>
+
+    </div>
+    <div id="warlock" ng-if="!ctrl.warlockHide">
+        <h2>Warlock</h2>
+        <span ng-repeat="item in ctrl.warlockList">
+            <img uib-popover class="item inactive"
+                 ng-click="ctrl.toggle(item)"
+                 ng-src="{{item.image}}"
+                 popover-trigger="'mouseenter'"
+                 popover-placement="bottom"
+                 uib-popover-template="'tpl.html'"
+                 ng-class="{'active': item.active}" />
+        </span>
+
+    </div>
+    <div id="titan" ng-if="!ctrl.titanHide">
+        <h2>Titan</h2>
+        <span ng-repeat="item in ctrl.titanList">
+            <img uib-popover class="item inactive"
+                 ng-click="ctrl.toggle(item)"
+                 ng-src="{{item.image}}"
+                 popover-trigger="'mouseenter'"
+                 popover-placement="bottom"
+                 uib-popover-template="'tpl.html'"
+                 ng-class="{'active': item.active}" />
+        </span>
+
+
+        <script src="~/Scripts/angular.js"></script>
+        <script src="~/Scripts/angular-cookies.js"></script>
+        <script src="~/Scripts/angular-animate.js"></script>
+        <script src="~/Scripts/angular-ui/ui-bootstrap.js"></script>
+        <script src="~/Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
+        <script src="~/App/Data/Hunter.js"></script>
+        <script src="~/App/Data/Titan.js"></script>
+        <script src="~/App/Data/Warlock.js"></script>
+        <script src="~/App/Data/Weapons.js"></script>
+        <script src="~/App/angular.module.js"></script>
 </body>
 </html>
