Added all of the remaining data from the destiny wiki Starting to mess with the actual destiny API

--- a/WebApplication1/Content/Main.css
+++ b/WebApplication1/Content/Main.css
@@ -9,3 +9,14 @@
     filter: brightness(150%);
     box-shadow: 5px 5px 5px #fff;
 }
+
+body {
+    background: black;
+}
+
+h1 {
+    color: white;
+}
+h2 {
+    color: white;
+}
