Gave up on Destiny API for now, have been using Python to try and deal with the compressed sqlite file that Destiny stores all of its icons and info in

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -74,6 +74,7 @@
                  uib-popover-template="'tpl.html'"
                  ng-class="{'active': item.active}" />
         </span>
+    </div>
 
 
         <script src="~/Scripts/angular.js"></script>
